New in 2.2
----------

* Allows more characters in an unquoted string (thanks Mike)
* added cfg_opt_get functions
* added cfg_opt_size function
* added support to print options to a file
* added print callback function per option


New in 2.1
----------

* Reversed logic in cfg_getXXX functions, they now abort if given an
  undeclared option name, and NULL/false if no value is set. Suggested
  by Ademar de Souza Reis Jr.
* Sections without CFGF_MULTI flag now have default values
* The cfg_getXXX functions now accept an extended syntax for the
  option name, try cfg_getxxx(cfg, "sectionname|optionname"). This way
  one doesn't have to first get the section with cfg_getsec().
* Fixed two more memory leaks. (val->section and cfg->filename)
* Fixed unterminated string bug in replacement strndup function
* Added project files for MS Visual C++ 6.0
* Includes io.h on windows
* Fixed initialization of default values for lists, when given a NULL
  string. Now initialized to the empty list. Noted by Juraj Variny.
* Setting a list to the empty list in the config file now possible.
* Appending to default values in a list is now ok.
* Hexadecimal escape sequences allowed in double-quoted strings
* Corrected line number with multi-line quoted strings
* Fixed undetected /*comment*/ (ie, without space between /* and the text)
* Forgot to fclose include file after use, found by James Haley
* Only include NLS support if gettext found in libc or preinstalled
* Documented the cfg_setlist and cfg_addlist functions
* The cfg_opt_setxxx functions no longer take a cfg_t parameter (unused anyway)


New in 2.0
----------

 NOTE! Compatibility with earlier versions is broken.

* Changed cfg_flag_t from enum to int (should now compile with c++)
* Variable number of arguments to functions: function types should no
  longer specify number of expected arguments in the initializer, the
  callback should instead check the argc variable.
* Fixed the cfg_tilde_expand function