@@ -1,7 +1,7 @@
 # this is a comment
 
 verbose=true
-server = "localhost"
+#server = "localhost"
 user = "joe"
 debug = 17
-delay = 6.77712472349623E-139
+#delay = 6.77712472349623E-139
